# ccminer

./: .gitignore  Makefile.am  build.sh  ccminer.cpp  configure.ac  run  util.cpp
.github/workflows/: ci.yml
equi/blake2/: blake2.h
sph/: ripemd.c
src/: api.cpp  util.cpp
src/compat/: Makefile.am
src/compat/jansson/: Makefile.am
src/equi/: equi-stratum.cpp
src/verus/: verus.cu
verus/: verus.cu
